--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Shop a Modern IT Tools on our site and get 100% satisfaction you want from our quality products."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
